--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -10,7 +10,7 @@
 <body class="bg-gray-100">
   <%- include('../partials/header') %>
   <main class="container mx-auto p-4">
-    <%- body %> <!-- Biến body được cung cấp bởi express-ejs-layouts -->
+    <%- body %>
   </main>
   <%- include('../partials/footer') %>
   <script src="/js/main.js"></script>
