--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -18,5 +18,5 @@
   </div>
   <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Login</button>
 </form>
-<a href="/auth/google" class="block mt-4 text-blue-500">Login with Google</a><h1 class="text-2xl font-bold mb-4">Login</h1>
+<a href="/auth/google" class="block mt-4 text-blue-500">Login with Google</a>
 
