--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -6,12 +6,24 @@
   <title>Social Network</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css">
+  
 </head>
 <body class="bg-gray-100">
   <%- include('../partials/header') %>
-  <main class="container mx-auto p-4">
-    <%- body %>
-  </main>
+
+  <div class="layout-container">
+    <!-- Sidebar trái -->
+    <%- include('../partials/sidebar-left') %>
+
+    <!-- Nội dung chính -->
+    <main class="main-content">
+      <%- body %>
+    </main>
+
+    <!-- Sidebar phải -->
+     <%- include('../partials/sidebar-right') %>
+  </div>
+
   <%- include('../partials/footer') %>
   <script src="/js/main.js"></script>
 </body>
