Add search user and post

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -15,7 +15,7 @@
     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <input type="hidden" name="userId" value="<%= user._id %>">
 
-    <!-- Add Story -->
+    <!-- Add Story
     <div class="mb-6">
       <h2 class="text-lg font-bold mb-2">Câu chuyện</h2>
       <div class="flex space-x-4 overflow-x-auto">
@@ -26,7 +26,7 @@
         <div class="flex-shrink-0 w-24 h-32 bg-gray-400 rounded-lg"></div>
         <div class="flex-shrink-0 w-24 h-32 bg-gray-500 rounded-lg"></div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Form tạo bài đăng -->
     <div class="mb-6">
