--- a/views/partials/sidebar-right.ejs
+++ b/views/partials/sidebar-right.ejs
@@ -1,6 +1,7 @@
 <!-- Sidebar phải -->
 <aside class="sidebar-right">
     <div class="mb-6">
+        <!-- div này chứa các thông báo, ẩn nó đi và để số thông báo màu đỏ, bấm vào sẽ hiện modal (khung thông báo) -->
         <h3 class="font-bold mb-2">Requests</h3>
         <div class="bg-white p-4 rounded shadow mb-2">
             <p class="font-semibold">Tyrell Barrows wants to add you to friends</p>
@@ -19,7 +20,8 @@
     </div>
     <div>
         <h3 class="font-bold mb-2">Contacts</h3>
-        <ul class="space-y-2">
+        <ul class="space-y-2"> 
+            <!-- div này là khung bạn bè (friend) hiện danh sách bạn bè, khi ấn vào một avatar hay tên một người nào đó sẽ hiện modal (box chat) góc dưới bên phải che đi danh sách bạn bè, và có thể ẩn hiện khi người dùng bấm vào, phía trên bên phải avatar của bạn bè sẽ hiện số tin nhắn họ đã gửi nhưng đối phương (user) chưa xem-->
             <li class="flex items-center"><span class="w-8 h-8 rounded-full bg-orange-500 mr-2"></span> Amanda Miles
             </li>
             <li class="flex items-center"><span class="w-8 h-8 rounded-full bg-yellow-500 mr-2"></span> Melissa Byron
