--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/styles.css">
   
 </head>
-<body class="bg-gray-100">
+<body data-user-id="<%= currentUser ? currentUser._id : '' %>" class="bg-gray-100">
   <%- include('../partials/header') %>
 
   <div class="layout-container">
