--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -6,7 +6,10 @@
   <title>Social Network</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css">
+  <!-- <link rel="stylesheet" href="/css/chat.css"> -->
   
+  <!-- CSRF token -->
+  <meta name="csrf-token" content="<%= csrfToken %>">
 </head>
 <body data-user-id="<%= currentUser ? currentUser._id : '' %>" class="bg-gray-100">
   <%- include('../partials/header') %>
