--- a/views/partials/sidebar-left.ejs
+++ b/views/partials/sidebar-left.ejs
@@ -20,6 +20,7 @@
         <li><a href="/users/search" class="flex items-center hover:text-blue-500"><span class="mr-2">👥</span> People</a></li>
         <li><a href="/photos" class="flex items-center hover:text-blue-500"><span class="mr-2">📷</span> Photos</a></li>
         <li><a href="/newsfeed" class="flex items-center hover:text-blue-500"><span class="mr-2">📰</span> News Feed</a></li>
+        <li><a href="/chat" class="flex items-center hover:text-blue-500"><span class="mr-2">📰</span> Chat</a></li>
         <li><a href="/users/profile/<%= user ? user._id : '' %>" class="flex items-center hover:text-blue-500"><span class="mr-2">👤</span> Profile</a></li>
         <li><a href="/settings" class="flex items-center hover:text-blue-500"><span class="mr-2">⚙️</span> Settings</a></li>
       </ul>
