--- a/views/partials/sidebar-right.ejs
+++ b/views/partials/sidebar-right.ejs
@@ -36,7 +36,7 @@
   <div class="flex items-center">
     <img id="minimizedAvatar" src="/images/default-avatar.png" alt="" class="w-6 h-6 rounded-full mr-2">
     <span id="minimizedName">Chat</span>
-    <span id="minimizedUnread" class="ml-2 bg-red-500 text-xs rounded-full px-2 py-1 hidden animate-pulse">0</span>
+    <!-- <span id="minimizedUnread" class="ml-2 bg-red-500 text-xs rounded-full px-2 py-1 hidden animate-pulse">0</span> -->
   </div>
 </div>
 
